--- a/src/app/courses/courses/courses.component.scss
+++ b/src/app/courses/courses/courses.component.scss
@@ -1,3 +1,11 @@
 table {
   width: 100%;
 }
+
+.loading-spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 0px;
+  background-color: rgb(208, 208, 208);
+}
